# AutoHeadlines

./: .env.example  .gitignore  AutoHeadlines.command  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  XAutoHeadlines.command  pyproject.toml  requirements.txt  启动 AutoHeadlines.command  启动 XAutoHeadlines.command  安装 AutoHeadlines.command  安装 XAutoHeadlines.command  安装本地模型（可选）.command
.github/workflows/: release.yml  tests.yml
assets/icons/: AutoHeadlines.icns
config/: keywords.yaml  sources.yaml
config/examples/: sources.global.example.yaml
config/profiles/: example-global-scitech-en.yaml  japan-korea-scitech-zh.yaml
docs/: INSTALL_MACOS.md  LEARNING.md  PROFILES.md  RELEASE_NOTES.md  SOURCES.md
prompts/: digest_prompt.md  digest_prompt_en.md
scripts/: __init__.py  build_release.py
src/: __init__.py  config_loader.py  main.py  reference_ingestion.py
src/collectors/: __init__.py  auto_candidates.py  collection.py  discovery.py  reported_history.py  selected_fulltext.py  source_diagnostics.py  url_filters.py
src/fetchers/: __init__.py  (+9 more)
tests/: test_acceptance_marker.py  test_analytics.py  test_collection_dates.py  test_config_assistant.py  test_database.py  test_date_window.py  test_digest_generator.py  test_discovery.py  test_html_fetcher.py  test_master_word_updater.py  test_nikkei_fetcher.py  test_profiles.py  test_release_builder.py  test_reported_history.py  test_review_app_ui_helpers.py  test_scoring.py  test_selected_fulltext.py  test_source_diagnostics.py  test_title_translator.py  test_word_writer.py
(+27 files in other folders)
